# Chess-2

./: .gitignore  Bishop.cpp  Bishop.h  BoardWindow.cpp  BoardWindow.h  CMakeLists.txt  Check_field.cpp  End_of_game_checks.cpp  Figure.h  Game.cpp  Game.cpp.orig  Game.h  Horse.cpp  Horse.h  King.cpp  King.h  Pawn.cpp  Pawn.h  Piece.h  PromotionChoose.cpp  PromotionChoose.h  Queen.cpp  Queen.h  README.md  Readme.md  Rock.cpp  Rock.h  Status.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myclient.cpp  promotiondialog.ui
Chess-2-back_end/: Bishop.cpp  Bishop.h  CMakeLists.txt  Check_field.cpp  Check_field.h  End_of_game_checks.cpp  End_of_game_checks.h  Figure.h  Game.cpp  Game.h  Horse.cpp  Horse.h  King.cpp  King.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rock.cpp  Rock.h
Lab2_client/: Lab2_client.pro  dialog.cpp  dialog.h
Lab2_server/: dialog.cpp  myclient.cpp  myclient.h  myserver.cpp  myserver.h
